--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="author" content="大熊人" />
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-        <title>圣诞树 - 大熊人</title>
+        <title>圣诞树 </title>
 
 		<link href="./css/ui.css" rel="stylesheet" media="screen" />
 		<link href="./css/domtree.css" rel="stylesheet" media="screen" />
@@ -22,17 +22,13 @@
     <body>
 
 		<!-- 圣诞树 -->
-    	<div class="tree"><h1>祝大家圣诞节快乐</h1></div>
+    	<div class="tree"><h1>祝李沐朗媳妇圣诞节快乐</h1></div>
 		<script src="./js/domtree.js"></script>
 
 		<!-- UI和第三方脚本 -->
-		<p class="project-title">来自大熊人</p>
+		<p class="project-title"></p>
 
-		<div class="credits">
-			<a href="../index.html">菜鸟的主页</a>
-			<a href="https://github.com/DaXiongRen/DOMTree">获取源代码</a>
-			<a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=QnF3dHd1dHdxd3UCMzNsIS0v" style="text-decoration:none;">给我写信</a>
-		</div>
+		
 
 		<script>
 			var _gaq = [['_setAccount', 'UA-15240703-1'], ['_trackPageview']];
